[package]
name = "catnip-provider"
description = "Fiberplane 'Catnip' Tutorial Provider"
authors = ["Fiberplane <info@fiberplane.com>"]
edition = "2021"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
fiberplane-models = { version = "1.0.0-beta.3" }
fiberplane-pdk = "1.0.0-beta.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-aux = "4.1"
url = { version = "2.3.1", features = ["serde"] }
# `default-features = false` is needed to avoid `wasm-bindgen` dependency
chrono = { version = "0.4", default-features = false, features = ["std"] }

[build-dependencies]
vergen = { version = "7.5", default-features = false, features = [
    "build",
    "git",
] }
